# AlphaPuyo

./: .gitignore  CMakeLists.txt  Pipfile  PuyoGame.cpp  PuyoGame.hpp  README.md  dataProcess.hpp  define.hpp  define.py  main.cpp  make_graph.py  make_puyo_model.py  mat_numpy.py  mcts.cpp  mcts.hpp  model_convert.py  model_convert2.py  puyoSim.cpp  queue.hpp  save.py  selfPlay.hpp  semaphore.hpp  stdafx.hpp  tf_utils.cpp  tf_utils.hpp  threadPool.hpp  train_cycle.bat  util.hpp
log_eval/: evaluate_random.csv  evaluate_single.csv  evaluate_small15_random.csv  evaluate_small15_single.csv  loss_random.csv  loss_single.csv  loss_small15_random.csv  loss_small15_single.csv
python/: clean.py  define.py  evaluate_network.py  make_puyo_model.py  model_convert.py  model_copy.py  puyo_game.py  random_mcts.py  save.py  train_network.py
resources/: best.pb_param.json  model.pb
いらない/log/: evaluate_small15.csv  evaluate_small15_1_1.csv  evaluate_small15_evald100_c10_main.csv  evaluate_small15_evald100_c75.csv  evaluate_small25.csv  loss_small15_1_1.csv  loss_small15_C15.csv  loss_small15_C7.5.csv  loss_small25.csv
いらない/model/: best.pb_param.json
